# zju-learning-assistant

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: tauri.yaml
src/: Classroom.jsx  Home.jsx  Index.jsx  Index.tsx  Learning.jsx  LearningSync.jsx  Login.jsx  Score.jsx  SearchTable.jsx  Settings.jsx  Todo.jsx  downloadManager.ts  global.css  main.jsx  main.tsx  model.ts  utils.js  utils.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: add_calendar.applescript  export_todo_reminder.applescript
src-tauri/src/: controller.rs  lib.rs  main.rs  model.rs  util.rs  zju_assist.rs
src-tauri/src/utils/: common.rs  macos.rs  mail.rs  mod.rs
src/components/: DownloadDrawer.tsx  SearchTable.tsx
src/components/Settings/: LlmSettingsModal.tsx  SubtitleSettingsModal.tsx  index.tsx
src/context/: ConfigContext.tsx  DownloadContext.tsx
src/hooks/: useAddDownloadTasks.ts
src/pages/Classroom/: index.tsx
src/pages/Home/: index.tsx
src/pages/Learning/: index.tsx
src/pages/Login/: index.tsx
src/pages/Score/: index.tsx
