[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "cli", "app-all", "dialog-open", "shell-open"] }
reqwest = { version = "0.11", features = ["json", "cookies", "stream"] }
regex = "1"
num-bigint = "0.4"
num-traits = "0.2"
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.1"
futures = "0.3"
bytes = "1.0"
fern = "0.6.2"
log = "0.4.20"
chrono = "0.4.31"
sys-info = "0.9.1"
rustc_version_runtime = "0.3.0"
miniz_oxide = "0.7.1"
image = "0.24.7"
pdf-writer = "0.9.2"
url = "2.5.0"
rand = "0.8.5"
directories-next = "2.0.0"
md5 = "0.7.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
