[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["PeiPei"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
reqwest = { version = "0.12.3", features = ["json", "cookies", "stream"] }
regex = "1"
num-bigint = "0.4"
num-traits = "0.2"
tokio = { version = "1.36.0", features = ["full"] }
percent-encoding = "2.1"
futures = "0.3"
bytes = "1.0"
fern = "0.6.2"
log = "0.4.20"
chrono = "0.4.31"
sys-info = "0.9.1"
rustc_version_runtime = "0.3.0"
miniz_oxide = "0.7.1"
image = "0.24.7"
pdf-writer = "0.9.2"
url = "2.5.0"
rand = "0.8.5"
directories-next = "2.0.0"
md5 = "0.7.0"
notify-rust = "4.10.0"
dashmap = "5.5.3"
keyring = "2.3.2"
anyhow = "1.0.81"
tauri-plugin-cli = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5.1"
objc2 = "0.5.2"
objc2-event-kit = { version = "0.2.2", features = ["all"] }
objc2-foundation = { version = "0.2.2", features = ["all"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
