[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["PeiPei"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
reqwest = { version = "0.12.12", features = ["json", "cookies", "stream"] }
regex = "1"
num = "0.4.3"
tokio = { version = "1.43.0", features = ["full"] }
percent-encoding = "2.3"
futures = "0.3"
log = "0.4.25"
chrono = "0.4.39"
miniz_oxide = "0.7.4"
image = "0.24.9"
pdf-writer = "0.9.3"
url = "2.5.4"
rand = "0.8.5"
md5 = "0.7.0"
dashmap = "5.5.3"
keyring = "2.3.3"
anyhow = "1.0.95"
tauri-plugin-cli = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2.2.1"
tauri-plugin-os = "2"
lettre = { version = "0.11.19", default-features = false, features = [
    "tokio1",
    "builder",
    "smtp-transport",
    "tokio1-rustls-tls",
] }

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "linux")))'.dependencies]
security-framework = "=2.10.0"
openssl = { version = "0.10.70", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5.1"
objc2 = "0.5.2"
objc2-event-kit = { version = "0.2.2", features = ["all"] }
objc2-foundation = { version = "0.2.2", features = ["all"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
